fix: bullet and jumping bug

--- a/public/style.css
+++ b/public/style.css
@@ -77,8 +77,8 @@ a:hover {
   font-size: 2rem;
   border-radius: 50%;
   border: none;
-  width: 4rem;
-  height: 4rem;
+  width: 4.7rem;
+  height: 4.7rem;
   margin: 0.5rem;
   display: flex;
   justify-content: center;
